[package]
name = "kv"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kvs"
path = "src/server.rs"

[[bin]]
name = "kvc"
path = "src/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.9"
prost-types = "0.9"
tokio = { version = "1.34.0", features = ["full"] }
tracing-subscriber = "0.3.18"
anyhow = "1.0.75"
axum = "0.7.1"
tower = "0.4.13"
async-prost = "0.3.0"
log = "0.4.20"
tracing = "0.1.40"
futures = "0.3.29"
bytes = "1.5.0"
thiserror = "1.0.50"
dashmap = "5.5.3"
sled = "0.34"
tempfile = "3.8.1"
flate2 = "1.0.28"
tracing-test = "0.2.4"
certify = "0.3"
tokio-rustls = "0.22"
rustls-native-certs = "0.5.0"
tokio-yamux = "0.3.8"
tokio-stream = "0.1.14"


[build-dependencies]
prost-build = { version = "0.9" }
